fix logout endpoint fix get authenticated account method